My second commit

--- a/Catalog/catalog.html
+++ b/Catalog/catalog.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
-    <a href="file:///Users/galina/Documents/HTML_Unit1/index.html">Главная</a>
-    <a href="file:///Users/galina/Documents/HTML_Unit1/Catalog/catalog.html">Каталог</a>
-    <a href="#">Контакты</a>
-    <h1>Каталог</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates, vel asperiores doloremque pariatur odit,
+    <a class = "links" href="../index.html">Главная</a>
+    <a class = "links" href="./Catalog/catalog.html">Каталог</a>
+    <a class = "links" href="#">Контакты</a>
+    <h1 class = "head1">Каталог</h1>
+    <p class = "par">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates, vel asperiores doloremque pariatur odit,
         sint sit suscipit tenetur quo ducimus consequatur laboriosam minima dolores alias expedita repellendus
         voluptatibus atque maiores ad fugiat voluptas maxime sunt consequuntur? Dolorum, libero delectus quibusdam ullam
         aliquam sed dolores saepe maxime quis non, fugiat possimus ipsam modi tempora dolor ipsum nisi incidunt, ducimus
@@ -24,17 +25,17 @@
         dignissimos explicabo ratione architecto consequuntur velit autem veniam inventore atque. Asperiores, officiis
         sequi?</p>
     <ul>
-        <li> <a href="file:///Users/galina/Documents/HTML_Unit1/IMG/mango.jpg">Манго</a><br>
+        <li> <a class = "links" href="../Img/mango.jpg">Манго</a><br>
             Фреш из манго<br>
-            <img src="file:///Users/galina/Documents/HTML_Unit1/IMG/mango.jpg" alt="Манго" width="100" height="100">
+            <img src="../Img/mango.jpg" alt="Манго" width="100" height="100">
         </li>
-        <li> <a href="file:///Users/galina/Documents/HTML_Unit1/IMG/sea.png">Море</a><br>
+        <li> <a class = "links" href="../Img/sea.png">Море</a><br>
             Отдых на море<br>
-            <img src="file:///Users/galina/Documents/HTML_Unit1/IMG/sea.png" alt="Море" width="100" height="100">
+            <img src="../Img/sea.png" alt="Море" width="100" height="100">
         </li>
-        <li> <a href="file:///Users/galina/Documents/HTML_Unit1/IMG/colornail.jpg">Лаки</a><br>
+        <li> <a class = "links" href="../Img/colornail.jpg">Лаки</a><br>
             Цветные лаки для ногтей<br>
-            <img src="file:///Users/galina/Documents/HTML_Unit1/IMG/colornail.jpg" alt="Лаки" width="100" height="100">
+            <img src="../Img/colornail.jpg" alt="Лаки" width="100" height="100">
         </li>
     </ul>
 </body>
