--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <a href="file:///Users/galina/Documents/HTML_Unit1/index.html">Главная</a>
-    <a href="file:///Users/galina/Documents/HTML_Unit1/Catalog/catalog.html">Каталог</a>
-    <a href="#">Контакты</a>
-<h1>Главная страница</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa rem qui accusantium, voluptatem temporibus aspernatur exercitationem voluptatibus voluptatum ut suscipit error. Ducimus voluptas ipsum, dolorum laborum ratione ea corrupti facere.</p>
-<h2>Добро пожаловать на сайт</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus animi doloribus porro corrupti sit reprehenderit illo pariatur voluptates nesciunt iure distinctio numquam tempora quod, laborum enim voluptatibus. Iusto, asperiores recusandae.</p>
+    <a class = "links" href="./index.html">Главная</a>
+    <a class = "links" href="./Catalog/catalog.html">Каталог</a>
+    <a class = "links" href="#">Контакты</a>
+<h1 class = "head1">Главная страница</h1>
+<p class = "par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa rem qui accusantium, voluptatem temporibus aspernatur exercitationem voluptatibus voluptatum ut suscipit error. Ducimus voluptas ipsum, dolorum laborum ratione ea corrupti facere.</p>
+<h2 class = "head2">Добро пожаловать на сайт</h2>
+<p class = "par">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus animi doloribus porro corrupti sit reprehenderit illo pariatur voluptates nesciunt iure distinctio numquam tempora quod, laborum enim voluptatibus. Iusto, asperiores recusandae.</p>
 </body>
 </html>
